--- a/4.html
+++ b/4.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - JavaScript</title>
+  <title>WEB1 - 박주환</title>
   <meta charset="utf-8">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <li><a href="3.html">JavaScript</a></li>
     <li><a href="4.html">박주환</a></li>
   </ol>
-  <h2>JavaScript</h2>
-  <p>푸하하</p>
+  <h2>박주환 바보</h2>
+  <p>주환아 안뇽 난 수아야 요즘 우리 둘 다 고민이 넘 많지만 이겨내장 사랑해 공부 열심히 하고 나도 내 일 열심히 하고 빠이팅</p>
 </body>
 </html>
