--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
+    <li><a href="4.html">박주환</a></li>
   </ol>
   <h2>Word Wide Web</h2>
   <p>저의 홈페이지에 오신 것을 환영합니당.</p>
